- the links now doesn't spread on various columns, even on firefox( use the following "trick": display:inline-block;webkit-column-break-after:auto; ) - fixed a little bug in the edit note button - fixed a bug on the illustration image's url

--- a/inc/shaarli.css
+++ b/inc/shaarli.css
@@ -259,16 +259,19 @@ hr{
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
 	border-radius: 2px;
 	margin: 0 2px 15px;
-	-webkit-column-break-inside: avoid;
-	-moz-column-break-inside: avoid;
-	column-break-inside: avoid;
-	min-width:250px;
+	display: inline-block;
+	webkit-column-break-after:auto;
+	-webkit-column-break-inside: avoid-column;
+	-moz-column-break-inside: avoid-column;
+	column-break-inside: avoid-column;
+	min-width:300px;width: 100%;
 	/*max-width:450px;*/
 	padding:0;
 	border-top: 1px solid #eee;
 	clear:both;
     list-style:numeric;
 	background: linear-gradient(#FaFaFa, #ffffff);
+
 }
 #linklist li.private { box-shadow: 0 1px 2px rgba(255,0,0,0.3);}
 /*#linklist:hover li.pin  {  padding:0; opacity:0.4;}*/
@@ -302,6 +305,10 @@ hr{
 .linkdescription p {padding:5px 0;}
 .linkdescription em {font-style:italic;}
 .linkdescription strong {font-weight: bold}
+.linkdescription h1 {font-size: 1.4em;font-weight: bold;}
+.linkdescription h2 {font-size: 1.3em;font-weight: bold;}
+.linkdescription h3 {font-size: 1.2em;font-weight: bold;}
+.linkdescription h4 {font-size: 1.1em;font-weight: bold;}
 .linkdescription a:hover { color:#F57900; }
 .linkfooter{
 	
